chart/templates/05-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-entrenapp-service
  namespace: entrenapp
spec:
  selector:
    app: api-entrenapp
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
